--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -212,4 +212,5 @@ en:
       default: "%a, %d %b %Y %H:%M:%S %z"
       long: "%B %d, %Y %H:%M"
       short: "%d %b %H:%M"
+      custom: "%m/%d/%Y"
     pm: pm
