cardsコントローラーにPDF表示を追加

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -213,6 +213,7 @@ en:
       long: "%B %d, %Y %H:%M"
       short: "%d %b %H:%M"
       custom: "%m/%d/%Y"
+      download: "_%m%d%Y%H%M%S"
     pm: pm
   views:
     pagination:
