国際化ファイルにエラーメッセージを追加

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -224,3 +224,7 @@ en:
       truncate: "&hellip;"
     list:
       importance: "&olcir;"
+    card:
+      frame_style_select: "choose layout"
+      font_style_select: "choose font"
+      more_image: "Two images are required to create"
