国際化ファイルを追記

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,6 +42,7 @@ en:
       default: "%Y-%m-%d"
       long: "%B %d, %Y"
       short: "%b %d"
+      custom: "%m/%d/%Y"
     month_names:
     -
     - January
@@ -139,6 +140,17 @@ en:
         one: is the wrong length (should be 1 character)
         other: is the wrong length (should be %{count} characters)
       other_than: must be other than %{count}
+      carrierwave_processing_error: failed to be processed
+      carrierwave_integrity_error: is not of an allowed file type
+      carrierwave_download_error: could not be downloaded
+      extension_whitelist_error: "You are not allowed to upload %{extension} files, allowed types: %{allowed_types}"
+      extension_blacklist_error: "You are not allowed to upload %{extension} files, prohibited types: %{prohibited_types}"
+      content_type_whitelist_error: "You are not allowed to upload %{content_type} files, allowed types: %{allowed_types}"
+      content_type_blacklist_error: "You are not allowed to upload %{content_type} files"
+      rmagick_processing_error: "Failed to manipulate with RMagick, maybe it is not an image?"
+      mini_magick_processing_error: "Failed to manipulate with MiniMagick, maybe it is not an image? Original Error: %{e}"
+      min_size_error: "File size should be greater than %{min_size}"
+      max_size_error: "File size should be less than %{max_size}"
     template:
       body: 'There were problems with the following fields:'
       header:
@@ -222,9 +234,13 @@ en:
       previous: "&lsaquo;"
       next: "&rsaquo;"
       truncate: "&hellip;"
-    list:
-      importance: "&olcir;"
+    message:
+      success_create: "Successfully created"
+      success_update: "Successfully updated"
+      success_delete: "Successfully deleted"
+      success_duplicate: "Successfully duplicated"
     card:
       frame_style_select: "choose layout"
       font_style_select: "choose font"
-      more_image: "Two images are required to create"
+    list:
+      importance: "&olcir;"
