--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -1,14 +1,51 @@
 ja:
   activerecord:
     models:
-      user: ユーザー
+      area: エリア
       card: カード
+      image: 画像
+      item: アイテム
+      list: リスト
+      note: ノート
+      travel: しおり
+      user: ユーザー
     attributes:
-      user:
-        role: 権限
       card:
+        title: カード名
+        sentence: 文章
         frame_style: フレーム
         font_style: フォント
+      card/images:
+        data: 画像
+      list:
+        title: リスト名
+      list/items:
+        name: アイテム名
+        remark: 備考
+      note:
+        content: 内容
+        image: 画像
+        importance: 重要度
+      travel:
+        title: しおり名
+        departed_at: 出発日
+        returned_at: 帰宅日
+        travel_image: 画像
+      travel/areas:
+        country: 国名
+        place: 場所
+        arrived_at: 到着日
+        left_at: 出発日
+        date_check: ""
+      user:
+        email: Eメール
+        password: パスワード
+        password_confirmation: パスワード確認
+        name: ニックネーム
+        role: 権限
+  attributes:
+    created_at: 作成日時
+    updated_at: 更新日時
   enums:
     user:
       role:
@@ -26,3 +63,10 @@ ja:
         shippori_mincho: しっぽり明朝
         soukou_mincho: 装甲明朝
         playball: Playball(英数字のみ)
+  errors:
+    area:
+      date_check: "到着日より前に出発することはできません"
+    card:
+      more_image: "作成には２枚の画像が必要です"
+    travel:
+      date_check: "帰宅日より前に出発することはできません"
